# MerilCat

./: .gitignore  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: sa4cpr5whgbz1vm2fd2wsg42fqnv73v5-source  vcd1brksxy9j2gxrsdmzph5hvq649pvr-source
src/: bot.rs  config.rs  core.rs  lib.rs  main.rs  plugin.rs  plugins.rs  prelude.rs  types.rs  utils.rs
src/core/: action.rs  adapter.rs  api.rs  client.rs  event.rs  plugin.rs
src/plugins/: ai_chat.rs  get_help.rs
src/types/: action_type.rs  event_type.rs  message_type.rs  plugin_type.rs  signal_type.rs
src/utils/: channels.rs  parser.rs
src/utils/parser/: event_parser.rs  message_parser.rs  request_parser.rs
