[package]
name = "meril_cat"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["ws"] }
dashmap = "6.1.0"
getset = "0.1.6"
regex = "1.12.2"
reqwest = "0.13.1"
rig-core = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
